--- a/ping pong (in progress)/index.html
+++ b/ping pong (in progress)/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pong</title>
+    <title>Ping-Pong</title>
 </head>
 <body>
     
 
 
- <script src="kot.js"></script>
+ <script src="scripts.js"></script>
 </body>
 </html>
