--- a/js14 sayt (No Completed)/sait2/index.html
+++ b/js14 sayt (No Completed)/sait2/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/App.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=%D0%B2%D0%B0%D1%88_%D0%BA%D0%BB%D1%8E%D1%87&lang=ru_RU"></script>
   </body>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш_ключ&lang=ru_RU"></script>
 </html>
